samples/_failures_safe/1761611143_39dccf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbbe27c2.c: In function ‘main’:
./samples/SAFE/__tmp_dbbe27c2.c:134:20: error: missing terminating " character
  134 |             printf("Matrix 2:\n
      |                    ^~~~~~~~~~~~
./samples/SAFE/__tmp_dbbe27c2.c:134:13: error: expected expression at end of input
  134 |             printf("Matrix 2:\n
      |             ^~~~~~
./samples/SAFE/__tmp_dbbe27c2.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbbe27c2.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbbe27c2.c:134:13: error: expected declaration or statement at end of input
